--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 <body>
-  <canvas>
+  <canvas id="canvas">
     <p>'Ere, your browser is a piece of shit innit.</p>
   </canvas>
   <script src="js/game.js"></script>
